# python-proto-generator

./: .gitignore  README.md  other.py  other_test.py  pyproject.toml
.github/workflows/: pr.yaml
hello_world_generator/: hello_world_generator.py  requirements.txt
hello_world_generator/test/: test_hello_world_generator.py
other_out/: hello_world_doc.html
proto/: hello_world.proto
proto/solar_system/mars/: mars_services.proto  marsians.proto
proto_summarizer/: descriptor_counters.py  generator.py  html_template.py  requirements.txt
proto_summarizer/test/: test_descriptor_counters.py  test_proto_summarizer.py
proto_summarizer/test/expected/: hello_world.html  mars_services.html  marsians.html
protos/: hello_world.proto
python_proto_generator/proto_python/: hello_world_pb2.py
